各类控件修改

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -224,6 +224,11 @@ html { scroll-behavior: smooth; }
 .no-scrollbar::-webkit-scrollbar { display: none; }
 .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
 
+*
+{
+    overscroll-behavior:none;
+}
+
 
 
 
